Update the HTML to 008

--- a/html-snap/cfbook001.html
+++ b/html-snap/cfbook001.html
@@ -52,38 +52,39 @@ possible and have a series of running examples and exercises
 about data analysis from the very beginning. <br />
 <br />
 The chapters 2-10 are similar to the <em>Think Python</em> book
-but there have been some changes. Nearly all number-oriented
+but there have been major changes. Number-oriented examples and
 exercises have been replaced with data-oriented exercises.
 Topics are presented in the order to needed to build increasingly
 sophisticated data analysis solutions. Some topics like <tt>try</tt> and
 <tt>except</tt> are pulled forward and presented as part of the chapter
-on conditionals while other concepts like functions are left until 
+on conditionals. Functions are given very light treatment until 
 they are needed to handle program complexity rather introduced 
-as an early lesson in abstraction. The word "recursion" does not 
-appear in the book at all.<br />
+as an early lesson in abstraction. Nearly all user-defined functions
+have been removed from the example code and exercises outside Chapter 4.
+The word "recursion"<sup><a name="text1" href="#note1">1</a></sup>
+does not appear in the book at all.<br />
 <br />
-In chapters 1 and 11-15, all of the material is brand new, focusing
+In chapters 1 and 11-16, all of the material is brand new, focusing
 on real-world uses and simple examples of Python for data analysis 
 including regular expressions for searching and parsing, 
 automating tasks on your computer, retrieving data across 
 the network, scraping web pages for data, 
-using web services, parsing XML data, and creating 
+using web services, parsing XML and JSON data, and creating 
 and using databases using Structured Query Language.<br />
 <br />
 The ultimate goal of all of these changes is a shift from a 
 Computer Science to an Informatics
 focus is to only include topics into a first technology 
-class that can be applied even if one chooses not to 
+class that can be useful even if one chooses not to 
 become a professional programmer.<br />
 <br />
 Students who find this book interesting and want to further explore
 should look at Allen B. Downey's <em>Think Python</em> book. Because there
 is a lot of overlap between the two books,
 students will quickly pick up skills in the additional
-areas of computing in general and computational thinking 
+areas of technical programming and algorithmic thinking 
 that are covered in <em>Think Python</em>.
-And given that the books have a similar writing style and at times
-have identical text and examples, you should be 
+And given that the books have a similar writing style, you should be 
 able to move quickly through <em>Think Python</em> with a minimum of effort.<br />
 <br />
 <a name="@default0"></a>
@@ -233,6 +234,8 @@ Needham MA<br />
 Allen Downey is an Associate Professor of Computer Science at 
 the Franklin W. Olin College of Engineering.<br />
 <br />
+<hr width="50%" size="1" /><dl><dt><font size="5"><a name="note1" href="#text1">1</a></font></dt><dd>Except of course for this line.
+</dd></dl>
 <hr />
 <a href="index.html"><img src="contents_motif.gif" alt="Up" /></a>
 <a href="cfbook002.html"><img src="next_motif.gif" alt="Next" /></a>
