--- a/html-snap/cfbook002.html
+++ b/html-snap/cfbook002.html
@@ -227,7 +227,7 @@ what most dogs likely hear is,
 "blah blah blah <b>walk</b> blah blah blah blah."
 That is because "walk" is a reserved word in dog language. Many
 might suggest that the language between humans and cats has no
-reserved words<sup><a name="text1" href="#note1">1</a></sup>.<br />
+reserved words<sup><a name="text2" href="#note2">1</a></sup>.<br />
 <br />
 The reserved words in the language where humans talk to 
 Python incudes the following:
@@ -468,7 +468,7 @@ the beginning.</font><br />
 <a name="toc9"></a>
 <h2><font color="black"><a name="htoc9">1.7</a>&nbsp;&nbsp;Writing a program</font></h2>
 <font color="black">Typing commands into the Python interpreter is a great way to experiment 
-with Pythonâ&euro;&trade;s features, but it is not recommended for solving more complex problems.<br />
+with Python's features, but it is not recommended for solving more complex problems.<br />
 <br />
 When we want to write a program, 
 we use a text editor to write the Python instructions into a file,
@@ -478,7 +478,7 @@ convention, Python scripts have names that end with <tt>.py</tt>.<br />
 <a name="@default13"></a><br />
 <br />
 To execute the script, you have to tell the Python interpreter 
-the name of the file. In a UNIX or Windows command window, 
+the name of the file. In a Unix or Windows command window, 
 you would type <tt>python hello.py</tt> as follows:
 </font><pre><font size="4" color="blue">
 csev$ cat hello.py
@@ -865,7 +865,7 @@ For example, "What is the human equivalent to a Central Processing Unit"?
 <div align="left"><font color="black"><b>Exercise&nbsp;9</b>&nbsp;&nbsp;<em>
 How do you fix a "Syntax Error"?
 </em></font></div><br />
-<hr width="50%" size="1" /><dl><dt><font size="5" color="black"><a name="note1" href="#text1">1</a></font></dt><dd><font color="black"><tt>http://xkcd.com/231/</tt></font>
+<hr width="50%" size="1" /><dl><dt><font size="5" color="black"><a name="note2" href="#text2">1</a></font></dt><dd><font color="black"><tt>http://xkcd.com/231/</tt></font>
 </dd></dl>
 <hr />
 <a href="cfbook001.html"><img src="previous_motif.gif" alt="Previous" /></a>
