--- a/html-snap/cfbook009.html
+++ b/html-snap/cfbook009.html
@@ -725,7 +725,8 @@ strings) are documented at
 methods and operators that only apply to mutable sequences
 are documented at <tt>docs.python.org/lib/typesseq-mutable.html</tt>.</font><br />
 <br />
-</li><li><font color="black">Pick an idiom and stick with it.<br />
+</li><li><font color="black">Pick an idiom and stick with it.
+<a name="@default569"></a><br />
 <br />
 Part of the problem with lists is that there are too many
 ways to do things. For example, to remove an element from
@@ -752,8 +753,8 @@ do the wrong thing.</font><br />
 <br />
 </li><li><font color="black">Make copies to avoid aliasing.<br />
 <br />
-<a name="@default569"></a>
-<a name="@default570"></a><br />
+<a name="@default570"></a>
+<a name="@default571"></a><br />
 <br />
 If you want to use a method like <tt>sort</tt> that modifies
 the argument, but you need to keep the original list as
@@ -896,45 +897,46 @@ Rewrite the guardian code in the above example without two
 <h2><font color="black"><a name="htoc114">8.15</a>&nbsp;&nbsp;Glossary</font></h2>
 <dl compact="compact"><dt><font color="black"><b>aliasing:</b></font></dt><dd><font color="black"> A circumstance where two or more variables refer to the same
 object.
-</font><a name="@default571"></a><br />
+</font><a name="@default572"></a><br />
 <br />
 </dd><dt><font color="black"><b>delimiter:</b></font></dt><dd><font color="black"> A character or string used to indicate where a
 string should be split.
-</font><a name="@default572"></a><br />
+</font><a name="@default573"></a><br />
 <br />
 </dd><dt><font color="black"><b>element:</b></font></dt><dd><font color="black"> One of the values in a list (or other sequence),
 also called items.
-</font><a name="@default573"></a><br />
-<br />
-</dd><dt><font color="black"><b>equivalent:</b></font></dt><dd><font color="black"> Having the same value.
 </font><a name="@default574"></a><br />
 <br />
-</dd><dt><font color="black"><b>index:</b></font></dt><dd><font color="black"> An integer value that indicates an element in a list.
+</dd><dt><font color="black"><b>equivalent:</b></font></dt><dd><font color="black"> Having the same value.
 </font><a name="@default575"></a><br />
 <br />
-</dd><dt><font color="black"><b>identical:</b></font></dt><dd><font color="black"> Being the same object (which implies equivalence).
+</dd><dt><font color="black"><b>index:</b></font></dt><dd><font color="black"> An integer value that indicates an element in a list.
 </font><a name="@default576"></a><br />
 <br />
-</dd><dt><font color="black"><b>list:</b></font></dt><dd><font color="black"> A sequence of values.
+</dd><dt><font color="black"><b>identical:</b></font></dt><dd><font color="black"> Being the same object (which implies equivalence).
 </font><a name="@default577"></a><br />
 <br />
-</dd><dt><font color="black"><b>list traversal:</b></font></dt><dd><font color="black"> The sequential accessing of each element in a list.
+</dd><dt><font color="black"><b>list:</b></font></dt><dd><font color="black"> A sequence of values.
 </font><a name="@default578"></a><br />
 <br />
-</dd><dt><font color="black"><b>nested list:</b></font></dt><dd><font color="black"> A list that is an element of another list.
+</dd><dt><font color="black"><b>list traversal:</b></font></dt><dd><font color="black"> The sequential accessing of each element in a list.
 </font><a name="@default579"></a><br />
+<br />
+</dd><dt><font color="black"><b>nested list:</b></font></dt><dd><font color="black"> A list that is an element of another list.
+</font><a name="@default580"></a><br />
 <br />
 </dd><dt><font color="black"><b>object:</b></font></dt><dd><font color="black"> Something a variable can refer to. An object
 has a type and a value.
-</font><a name="@default580"></a><br />
+</font><a name="@default581"></a><br />
 <br />
 </dd><dt><font color="black"><b>reference:</b></font></dt><dd><font color="black"> The association between a variable and its value.
-</font><a name="@default581"></a></dd></dl>
+</font><a name="@default582"></a></dd></dl>
 <a name="toc106"></a>
 <h2><font color="black"><a name="htoc115">8.16</a>&nbsp;&nbsp;Exercises</font></h2><br />
 <div align="left"><font color="black"><b>Exercise&nbsp;4</b>&nbsp;&nbsp;<em>
 Download a copy of the file from 
-<tt>www.py4inf.com/code/romeo.txt</tt><br />
+<tt>www.py4inf.com/code/romeo.txt</tt>
+<a name="@default583"></a><br />
 <br />
 Write a program to open the file <tt>romeo.txt</tt> and read it
 line by line. For each line, split the line into a list of 
@@ -986,7 +988,7 @@ Rewrite the program that prompts the user for a list of
 numbers and prints out the maximum and minimum of the
 numbers at the end when the user enters "done". Write
 the program to store the numbers the user enters in a list
-and use the <tt>max()</tt> and <tt>min()</tt> fuctions to 
+and use the <tt>max()</tt> and <tt>min()</tt> functions to 
 compute the maximum and minimum numbers after the 
 loop completes.
 </em></font><pre><font size="4" color="blue"><em>
