--- a/html-snap/index.html
+++ b/html-snap/index.html
@@ -14,7 +14,7 @@
 <br />
 <font size="4">Charles Severance</font><br />
 <br />
-Version 0.0.7<br />
+Version 0.0.8-d2<br />
 <br />
 <ul>
 <li><a href="cfbook001.html">Preface</a>
@@ -181,7 +181,7 @@ Version 0.0.7<br />
 </li><li><a href="cfbook012.html#toc127"><font color="black"><font size="3">Combining searching and extracting</font></font></a>
 </li><li><a href="cfbook012.html#toc128"><font color="black"><font size="3">Escape character</font></font></a>
 </li><li><a href="cfbook012.html#toc129"><font color="black"><font size="3">Summary</font></font></a>
-</li><li><a href="cfbook012.html#toc130"><font color="black"><font size="3">Bonus section for UNIX users</font></font></a>
+</li><li><a href="cfbook012.html#toc130"><font color="black"><font size="3">Bonus section for Unix users</font></font></a>
 </li><li><a href="cfbook012.html#toc131"><font color="black"><font size="3">Debugging</font></font></a>
 </li><li><a href="cfbook012.html#toc132"><font color="black"><font size="3">Glossary</font></font></a>
 </li><li><a href="cfbook012.html#toc133"><font color="black"><font size="3">Exercises</font></font></a>
@@ -190,59 +190,68 @@ Version 0.0.7<br />
 <ul>
 <li><a href="cfbook013.html#toc134"><font color="black"><font size="3">HyperText Transport Protocol - HTTP</font></font></a>
 </li><li><a href="cfbook013.html#toc135"><font color="black"><font size="3">The World's Simplest Web Browser</font></font></a>
-</li><li><a href="cfbook013.html#toc136"><font color="black"><font size="3">Retrieving web pages with <tt>urllib</tt></font></font></a>
-</li><li><a href="cfbook013.html#toc137"><font color="black"><font size="3">Parsing HTML and scraping the web</font></font></a>
-</li><li><a href="cfbook013.html#toc138"><font color="black"><font size="3">Parsing HTML using Regular Expressions</font></font></a>
-</li><li><a href="cfbook013.html#toc139"><font color="black"><font size="3">Parsing HTML using BeautifulSoup</font></font></a>
-</li><li><a href="cfbook013.html#toc140"><font color="black"><font size="3">Reading binary files using urllib</font></font></a>
-</li><li><a href="cfbook013.html#toc141"><font color="black"><font size="3">Glossary</font></font></a>
-</li><li><a href="cfbook013.html#toc142"><font color="black"><font size="3">Exercises</font></font></a>
+</li><li><a href="cfbook013.html#toc136"><font color="black"><font size="3">Retrieving an image over HTTP</font></font></a>
+</li><li><a href="cfbook013.html#toc137"><font color="black"><font size="3">Retrieving web pages with <tt>urllib</tt></font></font></a>
+</li><li><a href="cfbook013.html#toc138"><font color="black"><font size="3">Parsing HTML and scraping the web</font></font></a>
+</li><li><a href="cfbook013.html#toc139"><font color="black"><font size="3">Parsing HTML using Regular Expressions</font></font></a>
+</li><li><a href="cfbook013.html#toc140"><font color="black"><font size="3">Parsing HTML using BeautifulSoup</font></font></a>
+</li><li><a href="cfbook013.html#toc141"><font color="black"><font size="3">Reading binary files using urllib</font></font></a>
+</li><li><a href="cfbook013.html#toc142"><font color="black"><font size="3">Glossary</font></font></a>
+</li><li><a href="cfbook013.html#toc143"><font color="black"><font size="3">Exercises</font></font></a>
 </li></ul>
 </li><li><a href="cfbook014.html"><font color="black"><font size="3">Using Web Services</font></font></a>
 <ul>
-<li><a href="cfbook014.html#toc143"><font color="black"><font size="3">eXtensible Markup Language - XML</font></font></a>
-</li><li><a href="cfbook014.html#toc144"><font color="black"><font size="3">Parsing XML</font></font></a>
-</li><li><a href="cfbook014.html#toc145"><font color="black"><font size="3">Looping through nodes</font></font></a>
-</li><li><a href="cfbook014.html#toc146"><font color="black"><font size="3">Application Programming Interfaces (API)</font></font></a>
-</li><li><a href="cfbook014.html#toc147"><font color="black"><font size="3">Twitter web services</font></font></a>
-</li><li><a href="cfbook014.html#toc148"><font color="black"><font size="3">Handling XML data from an API</font></font></a>
-</li><li><a href="cfbook014.html#toc149"><font color="black"><font size="3">Glossary</font></font></a>
-</li><li><a href="cfbook014.html#toc150"><font color="black"><font size="3">Exercises</font></font></a>
+<li><a href="cfbook014.html#toc144"><font color="black"><font size="3">eXtensible Markup Language - XML</font></font></a>
+</li><li><a href="cfbook014.html#toc145"><font color="black"><font size="3">Parsing XML</font></font></a>
+</li><li><a href="cfbook014.html#toc146"><font color="black"><font size="3">Looping through nodes</font></font></a>
+</li><li><a href="cfbook014.html#toc147"><font color="black"><font size="3">JavaScript Object Notation - JSON</font></font></a>
+</li><li><a href="cfbook014.html#toc148"><font color="black"><font size="3">Parsing JSON</font></font></a>
+</li><li><a href="cfbook014.html#toc149"><font color="black"><font size="3">Application Programming Interfaces (API)</font></font></a>
+</li><li><a href="cfbook014.html#toc150"><font color="black"><font size="3">Google geocoding web service</font></font></a>
+</li><li><a href="cfbook014.html#toc151"><font color="black"><font size="3">Security and API usage</font></font></a>
+</li><li><a href="cfbook014.html#toc152"><font color="black"><font size="3">Glossary</font></font></a>
+</li><li><a href="cfbook014.html#toc153"><font color="black"><font size="3">Exercises</font></font></a>
 </li></ul>
 </li><li><a href="cfbook015.html"><font color="black"><font size="3">Using databases and Structured Query Language (SQL)</font></font></a>
 <ul>
-<li><a href="cfbook015.html#toc151"><font color="black"><font size="3">What is a database?</font></font></a>
-</li><li><a href="cfbook015.html#toc152"><font color="black"><font size="3">Database concepts</font></font></a>
-</li><li><a href="cfbook015.html#toc153"><font color="black"><font size="3">SQLite manager Firefox add-on</font></font></a>
-</li><li><a href="cfbook015.html#toc154"><font color="black"><font size="3">Creating a database table</font></font></a>
-</li><li><a href="cfbook015.html#toc155"><font color="black"><font size="3">Structured Query Language (SQL) summary</font></font></a>
-</li><li><a href="cfbook015.html#toc156"><font color="black"><font size="3">Spidering Twitter using a database</font></font></a>
-</li><li><a href="cfbook015.html#toc157"><font color="black"><font size="3">Basic data modeling</font></font></a>
-</li><li><a href="cfbook015.html#toc158"><font color="black"><font size="3">Programming with multiple tables</font></font></a>
-</li><li><a href="cfbook015.html#toc159"><font color="black"><font size="3">Three kinds of keys</font></font></a>
-</li><li><a href="cfbook015.html#toc160"><font color="black"><font size="3">Using JOIN to retrieve data</font></font></a>
-</li><li><a href="cfbook015.html#toc161"><font color="black"><font size="3">Summary</font></font></a>
-</li><li><a href="cfbook015.html#toc162"><font color="black"><font size="3">Debugging</font></font></a>
-</li><li><a href="cfbook015.html#toc163"><font color="black"><font size="3">Glossary</font></font></a>
+<li><a href="cfbook015.html#toc154"><font color="black"><font size="3">What is a database?</font></font></a>
+</li><li><a href="cfbook015.html#toc155"><font color="black"><font size="3">Database concepts</font></font></a>
+</li><li><a href="cfbook015.html#toc156"><font color="black"><font size="3">SQLite manager Firefox add-on</font></font></a>
+</li><li><a href="cfbook015.html#toc157"><font color="black"><font size="3">Creating a database table</font></font></a>
+</li><li><a href="cfbook015.html#toc158"><font color="black"><font size="3">Structured Query Language (SQL) summary</font></font></a>
+</li><li><a href="cfbook015.html#toc159"><font color="black"><font size="3">Spidering Twitter using a database</font></font></a>
+</li><li><a href="cfbook015.html#toc160"><font color="black"><font size="3">Basic data modeling</font></font></a>
+</li><li><a href="cfbook015.html#toc161"><font color="black"><font size="3">Programming with multiple tables</font></font></a>
+</li><li><a href="cfbook015.html#toc162"><font color="black"><font size="3">Three kinds of keys</font></font></a>
+</li><li><a href="cfbook015.html#toc163"><font color="black"><font size="3">Using JOIN to retrieve data</font></font></a>
+</li><li><a href="cfbook015.html#toc164"><font color="black"><font size="3">Summary</font></font></a>
+</li><li><a href="cfbook015.html#toc165"><font color="black"><font size="3">Debugging</font></font></a>
+</li><li><a href="cfbook015.html#toc166"><font color="black"><font size="3">Glossary</font></font></a>
 </li></ul>
-</li><li><a href="cfbook016.html"><font color="black"><font size="3">Automating common tasks on your computer</font></font></a>
+</li><li><a href="cfbook016.html"><font color="black"><font size="3">Visualizing data</font></font></a>
 <ul>
-<li><a href="cfbook016.html#toc164"><font color="black"><font size="3">File names and paths</font></font></a>
-</li><li><a href="cfbook016.html#toc165"><font color="black"><font size="3">Example: Cleaning up a photo directory</font></font></a>
-</li><li><a href="cfbook016.html#toc166"><font color="black"><font size="3">Command line arguments</font></font></a>
-</li><li><a href="cfbook016.html#toc167"><font color="black"><font size="3">Pipes</font></font></a>
-</li><li><a href="cfbook016.html#toc168"><font color="black"><font size="3">Glossary</font></font></a>
-</li><li><a href="cfbook016.html#toc169"><font color="black"><font size="3">Exercises</font></font></a>
+<li><a href="cfbook016.html#toc167"><font color="black"><font size="3">Building a Google map from geocoded data</font></font></a>
+</li><li><a href="cfbook016.html#toc168"><font color="black"><font size="3">Visualizing networks and interconnections</font></font></a>
+</li><li><a href="cfbook016.html#toc169"><font color="black"><font size="3">Visualizing mail data</font></font></a>
 </li></ul>
-</li><li><a href="cfbook017.html"><font color="black"><font size="3">Python Programming on Windows</font></font></a>
-</li><li><a href="cfbook018.html"><font color="black"><font size="3">Python Programming on Macintosh</font></font></a>
-</li><li><a href="cfbook019.html"><font color="black"><font size="3">Contributor List</font></font></a>
+</li><li><a href="cfbook017.html"><font color="black"><font size="3">Automating common tasks on your computer</font></font></a>
 <ul>
-<li><a href="cfbook019.html#toc170"><font color="black"><font size="3">Contributor List for "Python for Informatics"</font></font></a>
-</li><li><a href="cfbook019.html#toc171"><font color="black"><font size="3">Contributor List for "Think Python"</font></font></a>
+<li><a href="cfbook017.html#toc170"><font color="black"><font size="3">File names and paths</font></font></a>
+</li><li><a href="cfbook017.html#toc171"><font color="black"><font size="3">Example: Cleaning up a photo directory</font></font></a>
+</li><li><a href="cfbook017.html#toc172"><font color="black"><font size="3">Command line arguments</font></font></a>
+</li><li><a href="cfbook017.html#toc173"><font color="black"><font size="3">Pipes</font></font></a>
+</li><li><a href="cfbook017.html#toc174"><font color="black"><font size="3">Glossary</font></font></a>
+</li><li><a href="cfbook017.html#toc175"><font color="black"><font size="3">Exercises</font></font></a>
 </li></ul>
-</li><li><a href="cfbook020.html"><font color="black"><font size="3">Copyright Detail</font></font></a>
-</li><li><a href="cfbook021.html"><font color="black"><font size="3">Index</font></font></a>
+</li><li><a href="cfbook018.html"><font color="black"><font size="3">Python Programming on Windows</font></font></a>
+</li><li><a href="cfbook019.html"><font color="black"><font size="3">Python Programming on Macintosh</font></font></a>
+</li><li><a href="cfbook020.html"><font color="black"><font size="3">Contributor List</font></font></a>
+<ul>
+<li><a href="cfbook020.html#toc176"><font color="black"><font size="3">Contributor List for "Python for Informatics"</font></font></a>
+</li><li><a href="cfbook020.html#toc177"><font color="black"><font size="3">Contributor List for "Think Python"</font></font></a>
+</li></ul>
+</li><li><a href="cfbook021.html"><font color="black"><font size="3">Copyright Detail</font></font></a>
+</li><li><a href="cfbook022.html"><font color="black"><font size="3">Index</font></font></a>
 </li></ul>
 <!--FOOTER-->
 <hr size="2" /><blockquote><em>This document was translated from L<sup>A</sup>T<sub>E</sub>X by
