--- a/html-snap/cfbook010.html
+++ b/html-snap/cfbook010.html
@@ -14,12 +14,12 @@ Dictionaries
 <a href="cfbook011.html"><img src="next_motif.gif" alt="Next" /></a>
 <hr />
 <h1><font color="black"><a name="htoc116">Chapter&nbsp;9</a>&nbsp;&nbsp;Dictionaries</font></h1>
-<a name="@default582"></a>
-<a name="@default583"></a>
 <a name="@default584"></a>
 <a name="@default585"></a>
 <a name="@default586"></a>
 <a name="@default587"></a>
+<a name="@default588"></a>
+<a name="@default589"></a>
 <font color="black">A <b>dictionary</b> is like a list, but more general. In a list,
 the positions (a.k.a. indices) have to be integers; in a dictionary 
 the indices can be (almost) any type.<br />
@@ -35,8 +35,8 @@ The function <tt>dict</tt> creates a new dictionary with no items.
 Because <tt>dict</tt> is the name of a built-in function, you
 should avoid using it as a variable name.</font><br />
 <br />
-<a name="@default588"></a>
-<a name="@default589"></a>
+<a name="@default590"></a>
+<a name="@default591"></a>
 <pre><font size="4" color="blue">
 &gt;&gt;&gt; eng2sp = dict()
 &gt;&gt;&gt; print eng2sp
@@ -45,8 +45,8 @@ should avoid using it as a variable name.</font><br />
 <font color="black">The squiggly-brackets, <code>{}</code>, represent an empty dictionary.
 To add items to the dictionary, you can use square brackets:</font><br />
 <br />
-<a name="@default590"></a>
-<a name="@default591"></a>
+<a name="@default592"></a>
+<a name="@default593"></a>
 <pre><font size="4" color="blue">
 &gt;&gt;&gt; eng2sp['one'] = 'uno'
 </font></pre><font color="black">This line creates an item that maps from the key
@@ -80,16 +80,16 @@ of the items doesn't matter.<br />
 <br />
 If the key isn't in the dictionary, you get an exception:</font><br />
 <br />
-<a name="@default592"></a>
-<a name="@default593"></a>
+<a name="@default594"></a>
+<a name="@default595"></a>
 <pre><font size="4" color="blue">
 &gt;&gt;&gt; print eng2sp['four']
 KeyError: 'four'
 </font></pre><font color="black">The <tt>len</tt> function works on dictionaries; it returns the
 number of key-value pairs:</font><br />
 <br />
-<a name="@default594"></a>
-<a name="@default595"></a>
+<a name="@default596"></a>
+<a name="@default597"></a>
 <pre><font size="4" color="blue">
 &gt;&gt;&gt; len(eng2sp)
 3
@@ -97,9 +97,9 @@ number of key-value pairs:</font><br />
 something appears as a <em>key</em> in the dictionary (appearing
 as a value is not good enough).</font><br />
 <br />
-<a name="@default596"></a>
-<a name="@default597"></a>
 <a name="@default598"></a>
+<a name="@default599"></a>
+<a name="@default600"></a>
 <pre><font size="4" color="blue">
 &gt;&gt;&gt; 'one' in eng2sp
 True
@@ -109,8 +109,8 @@ False
 can use the method <tt>values</tt>, which returns the values as
 a list, and then use the <tt>in</tt> operator:</font><br />
 <br />
-<a name="@default599"></a>
-<a name="@default600"></a>
+<a name="@default601"></a>
+<a name="@default602"></a>
 <pre><font size="4" color="blue">
 &gt;&gt;&gt; vals = eng2sp.values()
 &gt;&gt;&gt; 'uno' in vals
@@ -127,14 +127,14 @@ why hash functions are so magical,
 but you can read more about it at
 <tt>wikipedia.org/wiki/Hash_table</tt>.</font><br />
 <br />
-<a name="@default601"></a><br />
+<a name="@default603"></a><br />
 <div align="left"><font color="black"><b>Exercise&nbsp;1</b>&nbsp;&nbsp;
 <a name="wordlist2"></a><br />
 <br />
-<a name="@default602"></a>
-<a name="@default603"></a><br />
+<a name="@default604"></a>
+<a name="@default605"></a><br />
 <br />
-<em>Write a function that reads the words in <tt>words.txt</tt> and
+<em>Write a program that reads the words in <tt>words.txt</tt> and
 stores them as keys in a dictionary. It doesn't matter what the
 values are. Then you can use the <tt>in</tt> operator
 as a fast way to check whether a string is in
@@ -142,7 +142,7 @@ the dictionary.</em></font></div><br />
 <a name="toc107"></a>
 <h2><font color="black"><a name="htoc117">9.1</a>&nbsp;&nbsp;Dictionary as a set of counters</font></h2>
 <a name="histogram"></a>
-<a name="@default604"></a>
+<a name="@default606"></a>
 <font color="black">Suppose you are given a string and you want to count how many
 times each letter appears. There are several ways you could do it:
 </font><ol type="1"><li><font color="black">You could create 26 variables, one for each letter of the
@@ -162,7 +162,7 @@ that you would increment the value of an existing item.</font></li></ol>
 <font color="black">Each of these options performs the same computation, but each
 of them implements that computation in a different way.<br />
 <br />
-<a name="@default605"></a><br />
+<a name="@default607"></a><br />
 <br />
 An <b>implementation</b> is a way of performing a computation;
 some implementations are better than others. For example,
@@ -172,57 +172,66 @@ and we only have to make room for the letters that do appear.<br />
 <br />
 Here is what the code might look like:
 </font><pre><font size="4" color="blue">
-def histogram(s):
-    d = dict()
-    for c in s:
-        if c not in d:
-            d[c] = 1
-        else:
-            d[c] = d[c] + 1
-    return d
-</font></pre><font color="black">The name of the function is <b>histogram</b>, which is a statistical
+word = 'brontosaurus'
+d = dict()
+for c in word:
+    if c not in d:
+        d[c] = 1
+    else:
+        d[c] = d[c] + 1
+print d
+</font></pre><font color="black">We are effectively computing a <b>histogram</b>, which is a statistical
 term for a set of counters (or frequencies). <br />
 <br />
-<a name="@default606"></a>
-<a name="@default607"></a>
-<a name="@default608"></a><br />
+<a name="@default608"></a>
+<a name="@default609"></a>
+<a name="@default610"></a><br />
 <br />
-The first line of the
-function creates an empty dictionary. The <tt>for</tt> loop traverses
+The <tt>for</tt> loop traverses
 the string. Each time through the loop, if the character <tt>c</tt> is
 not in the dictionary, we create a new item with key <tt>c</tt> and the
 initial value 1 (since we have seen this letter once). If <tt>c</tt> is
 already in the dictionary we increment <tt>d[c]</tt>.<br />
 <br />
-<a name="@default609"></a><br />
+<a name="@default611"></a><br />
 <br />
-Here's how it works:
+Here's the output of the program:
 </font><pre><font size="4" color="blue">
-&gt;&gt;&gt; h = histogram('brontosaurus')
-&gt;&gt;&gt; print h
 {'a': 1, 'b': 1, 'o': 2, 'n': 1, 's': 2, 'r': 2, 'u': 2, 't': 1}
 </font></pre><font color="black">The histogram indicates that the letters <tt>'a'</tt> and <code>'b'</code>
 appear once; <code>'o'</code> appears twice, and so on.<br />
-</font><div align="left"><font color="black"><b>Exercise&nbsp;2</b>&nbsp;&nbsp;<br />
 <br />
-<a name="@default610"></a>
-<a name="@default611"></a><br />
+<a name="@default612"></a>
+<a name="@default613"></a><br />
 <br />
-<em>Dictionaries have a method called <tt>get</tt> that takes a key
+Dictionaries have a method called <tt>get</tt> that takes a key
 and a default value. If the key appears in the dictionary,
 <tt>get</tt> returns the corresponding value; otherwise it returns
 the default value. For example:
-</em></font><pre><font size="4" color="blue"><em>
-&gt;&gt;&gt; h = histogram('a')
-&gt;&gt;&gt; print h
-{'a': 1}
-&gt;&gt;&gt; h.get('a', 0)
-1
-&gt;&gt;&gt; h.get('b', 0)
+</font><pre><font size="4" color="blue">
+&gt;&gt;&gt; counts = { 'chuck' : 1 , 'annie' : 42, 'jan': 100}
+&gt;&gt;&gt; print counts.get('jan', 0)
+100
+&gt;&gt;&gt; print counts.get('tim', 0)
 0
-</em></font></pre><font color="black"><em>Use <tt>get</tt> to write <tt>histogram</tt> more concisely. You
-should be able to eliminate the <tt>if</tt> statement.
-</em></font></div><br />
+</font></pre><font color="black">We can use <tt>get</tt> to write our histogram loop more concisely. 
+Because the <tt>get</tt> method automatically handles the case where a key
+is not in a dictionary, we can reduce four lines down to one
+and eliminate the <tt>if</tt> statement.
+</font><pre><font size="4" color="blue">
+word = 'brontosaurus'
+d = dict()
+for c in word:
+    d[c] = d.get(c,0) + 1
+print d
+</font></pre><font color="black">The use of the <tt>get</tt> method to simplify this counting loop 
+ends up being a very commonly used "idiom" in Python and 
+we will use it many times the rest of the book. So you should
+take a moment and compare the loop using the <tt>if</tt> statement
+and <tt>in</tt> operator with the loop using the <tt>get</tt> method.
+They do exactly the same thing, but one is more succinct.
+</font><a name="@default614"></a><br />
+<br />
 <a name="toc108"></a>
 <h2><font color="black"><a name="htoc118">9.2</a>&nbsp;&nbsp;Dictionaries and files</font></h2>
 <font color="black">One of the common uses of a dictionary is to count the occurrence
@@ -244,8 +253,8 @@ Who is already sick and pale with grief
 break each line into a list of words, and then loop through each 
 of the words in the line, and count each word using a dictionary.<br />
 <br />
-<a name="@default612"></a>
-<a name="@default613"></a>
+<a name="@default615"></a>
+<a name="@default616"></a>
 You will see that we have two <tt>for</tt> loops. The outer loop is reading the
 lines of the file and the inner loop is iterating through each
 of the words on that particular line. This is an example
@@ -258,6 +267,7 @@ the outer loop makes a single iteration, we think of the inner
 loop as iterating "more quickly" and the outer loop as iterating 
 more slowly.<br />
 <br />
+<a name="@default617"></a>
 The combination of the two nested loops ensures that we will count
 every word on every line of the input file.
 </font><pre><font size="4" color="blue">
@@ -297,30 +307,47 @@ Python code to get us the output that will be more helpful.</font><br />
 <br />
 <a name="toc109"></a>
 <h2><font color="black"><a name="htoc119">9.3</a>&nbsp;&nbsp;Looping and dictionaries</font></h2>
-<a name="@default614"></a>
-<a name="@default615"></a>
-<a name="@default616"></a>
+<a name="@default618"></a>
+<a name="@default619"></a>
+<a name="@default620"></a>
 <font color="black">If you use a dictionary as the sequence 
 in a <tt>for</tt> statement, it traverses
-the keys of the dictionary. For example, <code>print_hist</code>
+the keys of the dictionary. This loop
 prints each key and the corresponding value:
 </font><pre><font size="4" color="blue">
-def print_hist(h):
-    for c in h:
-        print c, h[c]
+counts = { 'chuck' : 1 , 'annie' : 42, 'jan': 100}
+for key in counts:
+    print key, counts[key]
 </font></pre><font color="black">Here's what the output looks like:
 </font><pre><font size="4" color="blue">
-&gt;&gt;&gt; h = histogram('parrot')
-&gt;&gt;&gt; print_hist(h)
-a 1
-p 1
-r 2
-t 1
-o 1
+jan 100
+chuck 1
+annie 42
 </font></pre><font color="black">Again, the keys are in no particular order.<br />
 <br />
-<a name="@default617"></a>
-<a name="@default618"></a>
+<a name="@default621"></a>
+We can use this pattern to implement the various loop idioms
+that we have described earlier. For example if we wanted 
+to find all the entries in a dictionary with a value 
+above ten, we could write the following code:
+</font><pre><font size="4" color="blue">
+counts = { 'chuck' : 1 , 'annie' : 42, 'jan': 100}
+for key in counts:
+    if counts[key] &gt; 10 :
+        print key, counts[key]
+</font></pre><font color="black">The <tt>for</tt> loop iterates through the 
+<em>keys</em> of the dictionary, so we must 
+use the index operator to retrieve the 
+corresponding <em>value</em>
+for each key.
+Here's what the output looks like:
+</font><pre><font size="4" color="blue">
+jan 100
+annie 42
+</font></pre><font color="black">We see only the entries with a value above 10.<br />
+<br />
+<a name="@default622"></a>
+<a name="@default623"></a>
 If you want to print the keys in alphabetical order, you first 
 make a list of the keys in the dictionary using the 
 <tt>keys</tt> method available in dictionary objects,
@@ -329,25 +356,26 @@ and loop through the sorted list, looking up each
 key printing out key/value pairs in sorted order as follows
 as follows:
 </font><pre><font size="4" color="blue">
-def print_sorted_hist(h):
-    lst = h.keys()
-    lst.sort()
-    for c in lst:
-        print c, h[c]
+counts = { 'chuck' : 1 , 'annie' : 42, 'jan': 100}
+lst = counts.keys()
+print lst
+lst.sort()
+for key in lst:
+    print key, counts[key]
 </font></pre><font color="black">Here's what the output looks like:
 </font><pre><font size="4" color="blue">
-&gt;&gt;&gt; h = histogram('parrot')
-&gt;&gt;&gt; print_sorted_hist(h)
-a 1
-o 1
-p 1
-r 2
-t 1
-</font></pre><font color="black">So now the keys are in alphabetical order.</font><br />
+['jan', 'chuck', 'annie']
+annie 42
+chuck 1
+jan 100
+</font></pre><font color="black">First you see the list of keys in unsorted order that 
+we get from the <tt>keys</tt> method. Then we see the key/value
+pairs in order from the <tt>for</tt> loop.</font><br />
 <br />
 <a name="toc110"></a>
 <h2><font color="black"><a name="htoc120">9.4</a>&nbsp;&nbsp;Advanced text parsing</font></h2>
-<font color="black">In the above example using the file <tt>romeo.txt</tt>,
+<a name="@default624"></a><font color="black">
+In the above example using the file <tt>romeo.txt</tt>,
 we made the file as simple as possible by removing 
 any and all punctuation by hand. The real text 
 has lots of punctuation as shown below:
@@ -438,7 +466,7 @@ will pick up this example once we learn about tuples.</font><br />
 <br />
 <a name="toc111"></a>
 <h2><font color="black"><a name="htoc121">9.5</a>&nbsp;&nbsp;Debugging</font></h2>
-<a name="@default619"></a>
+<a name="@default625"></a>
 <font color="black">As you work with bigger datasets it can become unwieldy to
 debug by printing and checking data by hand. Here are some
 suggestions for debugging large datasets:
@@ -465,10 +493,10 @@ for errors automatically. For example, if you are computing the
 average of a list of numbers, you could check that the result is
 not greater than the largest element in the list or less than
 the smallest. This is called a "sanity check" because it detects
-results that are "insane."<br />
+results that are "completely illogical."<br />
 <br />
-<a name="@default620"></a>
-<a name="@default621"></a><br />
+<a name="@default626"></a>
+<a name="@default627"></a><br />
 <br />
 Another kind of check compares the results of two different
 computations to see if they are consistent. This is called a
@@ -479,56 +507,56 @@ can make it easier to spot an error. </font></dd></dl>
 <font color="black">Again, time you spend building scaffolding can reduce
 the time you spend debugging.</font><br />
 <br />
-<a name="@default622"></a><br />
+<a name="@default628"></a><br />
 <br />
 <a name="toc112"></a>
 <h2><font color="black"><a name="htoc122">9.6</a>&nbsp;&nbsp;Glossary</font></h2>
 <dl compact="compact"><dt><font color="black"><b>dictionary:</b></font></dt><dd><font color="black"> A mapping from a set of keys to their
 corresponding values.
-</font><a name="@default623"></a><br />
+</font><a name="@default629"></a><br />
 <br />
 </dd><dt><font color="black"><b>hashtable:</b></font></dt><dd><font color="black"> The algorithm used to implement Python
 dictionaries.
-</font><a name="@default624"></a><br />
+</font><a name="@default630"></a><br />
 <br />
 </dd><dt><font color="black"><b>hash function:</b></font></dt><dd><font color="black"> A function used by a hashtable to compute the
 location for a key.
-</font><a name="@default625"></a><br />
+</font><a name="@default631"></a><br />
 <br />
 </dd><dt><font color="black"><b>histogram:</b></font></dt><dd><font color="black"> A set of counters.
-</font><a name="@default626"></a><br />
+</font><a name="@default632"></a><br />
 <br />
 </dd><dt><font color="black"><b>implementation:</b></font></dt><dd><font color="black"> A way of performing a computation.
-</font><a name="@default627"></a><br />
+</font><a name="@default633"></a><br />
 <br />
 </dd><dt><font color="black"><b>item:</b></font></dt><dd><font color="black"> Another name for a key-value pair.
-</font><a name="@default628"></a><br />
+</font><a name="@default634"></a><br />
 <br />
 </dd><dt><font color="black"><b>key:</b></font></dt><dd><font color="black"> An object that appears in a dictionary as the
 first part of a key-value pair.
-</font><a name="@default629"></a><br />
+</font><a name="@default635"></a><br />
 <br />
 </dd><dt><font color="black"><b>key-value pair:</b></font></dt><dd><font color="black"> The representation of the mapping from
 a key to a value.
-</font><a name="@default630"></a><br />
+</font><a name="@default636"></a><br />
 <br />
 </dd><dt><font color="black"><b>lookup:</b></font></dt><dd><font color="black"> A dictionary operation that takes a key and finds
 the corresponding value.
-</font><a name="@default631"></a><br />
+</font><a name="@default637"></a><br />
 <br />
 </dd><dt><font color="black"><b>nested loops:</b></font></dt><dd><font color="black"> When there is one or more loops "inside" of 
 another loop. The inner loop runs to completion each time the outer
 loop runs once.
-</font><a name="@default632"></a>
-<a name="@default633"></a><br />
+</font><a name="@default638"></a>
+<a name="@default639"></a><br />
 <br />
 </dd><dt><font color="black"><b>value:</b></font></dt><dd><font color="black"> An object that appears in a dictionary as the
 second part of a key-value pair. This is more specific than
 our previous use of the word "value."
-</font><a name="@default634"></a></dd></dl>
+</font><a name="@default640"></a></dd></dl>
 <a name="toc113"></a>
 <h2><font color="black"><a name="htoc123">9.7</a>&nbsp;&nbsp;Exercises</font></h2><br />
-<div align="left"><font color="black"><b>Exercise&nbsp;3</b>&nbsp;&nbsp;<em>
+<div align="left"><font color="black"><b>Exercise&nbsp;2</b>&nbsp;&nbsp;<em>
 Write a program that categorizes each mail message by which 
 day of the week the commit was done. To do this look for 
 lines which start with "From", then look for the 
@@ -544,20 +572,30 @@ python dow.py
 Enter a file name: mbox-short.txt
 {'Fri': 20, 'Thu': 6, 'Sat': 1}
 </em></font></pre></div><br />
+<div align="left"><font color="black"><b>Exercise&nbsp;3</b>&nbsp;&nbsp;<em>
+Write a program to read through a mail log, and 
+build a histogram using a dictionary to count how many 
+messages have come from each email address 
+and print the dictionary.
+</em></font><pre><font size="4" color="blue"><em>
+Enter file name: mbox-short.txt
+{'gopal.ramasammycook@gmail.com': 1, 'louis@media.berkeley.edu': 3, 
+'cwen@iupui.edu': 5, 'antranig@caret.cam.ac.uk': 1, 
+'rjlowe@iupui.edu': 2, 'gsilver@umich.edu': 3, 
+'david.horwitz@uct.ac.za': 4, 'wagnermr@iupui.edu': 1, 
+'zqian@umich.edu': 4, 'stephen.marquard@uct.ac.za': 2, 
+'ray@media.berkeley.edu': 1}
+</em></font></pre></div><br />
 <div align="left"><font color="black"><b>Exercise&nbsp;4</b>&nbsp;&nbsp;<em>
-Write a program to read through a mail log, and figure 
-out who had the most messages in the file. The program looks 
-for "From" lines and takes the second parameter on those 
-lines as the person who sent the mail.<br />
+Add code to the above program to figure out who has the 
+most messages in the file.<br />
 <br />
-The program creates a Python dictionary that maps 
-the sender's address to the total number of messages for that person.<br />
-<br />
-After all the data has been read the program looks 
-through the dictionary using a maximum loop
- (see Section&nbsp;<a href="cfbook006.html#maximumloop">5.7.2</a>)
+After all the data has been read and the dictionary has been
+created, look through the dictionary using a 
+maximum loop
+ (see Section&nbsp;<a href="cfbook006.html#maximumloop">??</a>)
 to find who has the most 
-messages and how many messages the person has.
+messages and print how many messages the person has.
 </em></font><pre><font size="4" color="blue"><em>
 Enter a file name: mbox-short.txt
 cwen@iupui.edu 5
